--- a/config/locales/models/transaction.en.yml
+++ b/config/locales/models/transaction.en.yml
@@ -68,6 +68,7 @@ en:
       edit: Edit transaction
       new: Add a transaction
       upload: Upload bulk transactions data
+      upload_success: Successful uploads
   activerecord:
     errors:
       models:
@@ -104,3 +105,6 @@ en:
         unauthorised: You are not authorised to report against this activity
         unknown_identifier: Identifier is not recognised
         invalid_characters: This cell contains invalid characters
+    success:
+      transaction:
+        back_link: Back to report
