--- a/config/locales/models/report.en.yml
+++ b/config/locales/models/report.en.yml
@@ -32,6 +32,7 @@ en:
     report:
       activities: Activities
       forecasts: Forecasts
+      transactions: Actuals
       variance: Variance
       budgets: Budgets
 
@@ -49,6 +50,17 @@ en:
           <p class="govuk-body">
             For in-depth guidance, refer to <a href="https://beisodahelp.zendesk.com/hc/en-gb/search?utf8=%E2%9C%93&query=uploading+new+activities">uploading new activities</a> and <a href="https://beisodahelp.zendesk.com/hc/en-gb/search?utf8=%E2%9C%93&query=update+activities">uploading updates to activities</a> in the help centre.
           </p>
+      transactions:
+        heading: Actuals in this report
+        per_activity_heading: Actual spend per activity
+        guidance_html:
+          <p class="govuk-body">
+            This page shows all the actual spend you have reported in RODA since the last reporting quarter.
+          </p>
+          <p class="govuk-body">
+            For in-depth guidance, refer to <a href="https://beisodahelp.zendesk.com/hc/en-gb/search?utf8=%E2%9C%93&query=uploading+new+actuals">uploading new actuals</a> and <a href="https://beisodahelp.zendesk.com/hc/en-gb/search?utf8=%E2%9C%93&query=update+activities">uploading updates to activities</a> in the help centre.
+          </p>
+
     report:
       activate:
         confirm: By activating this report, you will allow Delivery Partner users to add new data, and amend existing data. These changes will associate to this report only.
@@ -118,6 +130,7 @@ en:
         complete: This report is approved
       variance: "%{report_financial_quarter} %{report_description} variance"
       forecasts: "%{report_financial_quarter} %{report_description} forecasts"
+      transactions: "%{report_financial_quarter} %{report_description} actuals"
       budgets: "%{report_financial_quarter} %{report_description} budgets"
       activities: "%{report_financial_quarter} %{report_description} activities"
   mailer:
