Show table of delivery partners on BEIS home page
This lets BEIS users choose the delivery partner they want to view right
on the home page without having to use the organisation section.

Note: the back link on the organisation show page is broken by this
change in that it is not link 'back' as there are multiple placed from
which you might have come the page we will be looking to fix this as
part of wider work centred on breadcrumbs.

--- a/config/locales/default.en.yml
+++ b/config/locales/default.en.yml
@@ -25,6 +25,10 @@ en:
     error:
       unknown: Unknown error
     warning: Warning
+  table:
+    header:
+      default:
+        action: Action
   activerecord:
     errors:
       format: "%{attribute} %{message}"
