--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -22,6 +22,7 @@ en:
       children: Activity %{name} - Child activities
       comments: Activity %{name} - Comments
       transfers: Activity %{name} - Transfers
+      historical_events: Activity %{name} - Change history
   form:
     button:
       activity:
@@ -346,6 +347,9 @@ en:
         default_selection_value: Select a recipient country
       third_party_projects: Third-party projects (level D)
       transactions: Transactions
+    tab_content:
+      change_history:
+        guidance: Changes made to this activity
   tabs:
     activity:
       title: Contents
@@ -355,6 +359,7 @@ en:
       children: Child activities
       comments: Comments
       transfers: Transfers
+      historical_events: Change history
     activities:
       current: Current
       historic: Historic
@@ -370,6 +375,7 @@ en:
       upload: Upload bulk activity data
       other_funding: Other funding
       transfers: Transfers
+      change_history: Change history
     activities:
       current: Current activities
       historic: Historic activities
