--- a/config/locales/models/report.en.yml
+++ b/config/locales/models/report.en.yml
@@ -30,6 +30,7 @@ en:
         comment: Comment
   tabs:
     report:
+      summary: Summary
       activities: Activities
       forecasts: Forecasts
       transactions: Actuals
@@ -60,7 +61,12 @@ en:
           <p class="govuk-body">
             For in-depth guidance, refer to <a href="https://beisodahelp.zendesk.com/hc/en-gb/search?utf8=%E2%9C%93&query=uploading+new+actuals">uploading new actuals</a> and <a href="https://beisodahelp.zendesk.com/hc/en-gb/search?utf8=%E2%9C%93&query=update+activities">uploading updates to activities</a> in the help centre.
           </p>
-
+      summary:
+        heading: Summary of the contents of this report
+        activities_added: New activities added
+        activities_updated: Updated activities
+        actuals_total: Total of actuals
+        forecasts_total: Total of forecasts
     report:
       activate:
         confirm: By activating this report, you will allow Delivery Partner users to add new data, and amend existing data. These changes will associate to this report only.
