Report actuals tab improvements
Here we attempt to improve the layout and content of the report >
actuals tab.

- Tab and Tab title are the same
- All content and UI relating to providing data is now grouped together
  and not shown when the report content cannot be changed
- The content and layout of the providing actuals data section has been
  improved with headings and call-outs
- The guidance links to the correct guidance
- The 'download template' link has been brought to the tab as this is
  more natural place than behind an 'upload' button.
- For the tab, the upload button is now primary, whilst we already have
  a primary button on the report itself, we are not a linear service and
  having more than on primary actions is a natural part of a complex
  interface like this.
- A section break has been added to the providing data section to
  visually separate it from the list of actuals data

Overall the aim to have the content and layout strike a balance between
being succinct and helpful. I also want the content to work for users
regardless of the report state, which this does well.

--- a/config/locales/models/transaction.en.yml
+++ b/config/locales/models/transaction.en.yml
@@ -49,20 +49,39 @@ en:
         receiving_organisation: The organisation receiving the money from this transaction.
         receiving_organisation_reference_html: For example, GB-COH-12345. To lookup codes or for more infomation see <a href="http://org-id.guide/" target="_blank" class="govuk-link">the organisation finder service (Opens in new window)</a>.
   table:
+    caption:
+      transaction:
+        actuals_in_report: Actuals added to this report
     header:
       transaction:
         financial_quarter: Financial quarter
         value: Transaction amount
         receiving_organisation: Receiver
+  tabs:
+    transactions:
+      heading: Actuals
+      copy: Listed below are the actuals that have been added to this report.
+      providing:
+        heading: Providing actuals data
+        copy: Actuals data can be added by using the application interface or by uploading data.
+      upload:
+        heading: Upload data
+        copy_html:
+          <p class="govuk-body">Large numbers of actuals can be added via the actuals upload.</p>
+          <p class="govuk-body">For guidance on uploading actuals data, see the <a class="govuk-link" target="_blank" rel="noreferrer noopener" href="https://beisodahelp.zendesk.com/hc/en-gb/articles/1500005601882-Downloading-the-Actuals-Template-in-order-to-Bulk-Upload">guidance in the help centre (opens in new tab)</a>.</p>
+        warning: Ensure you use the correct template (available below) when uploading actuals data.
   page_content:
     transactions:
       button:
         create: Add a transaction
+        upload: Upload actuals data
+        download_template: Download actuals data template
       edit_noun: transaction
       table:
         headers:
           providing_organisation: Provider
           receiving_organisation: Receiver
+
   page_title:
     transaction:
       edit: Edit transaction
