--- a/config/locales/models/transaction.en.yml
+++ b/config/locales/models/transaction.en.yml
@@ -19,7 +19,7 @@ en:
   form:
     label:
       transaction:
-        csv_file: Upload CSV spreadsheet
+        csv_file: Provide actuals data to upload
         csv_file_recover_from_error: Re-upload CSV spreadsheet
         currency: Currency
         description: Describe the transaction
@@ -39,7 +39,7 @@ en:
         receiving_organisation: Receiving organisation (optional)
     hint:
       transaction:
-        csv_file: Upload a spreadsheet containing transaction information in CSV format.
+        csv_file: Select the file that contains the actuals data for this report.
         csv_file_recover_from_error_html: Upload a spreadsheet containing transaction information in CSV format. We recommend <a href="%{link}" class="govuk-link">downloading this CSV template</a>.
         date: If you're reporting quarterly data, select the last day of the quarter. For example, 31 12 2020
         description: For example, 2020 quarter one spend on the Early Career Research Network project.
@@ -81,12 +81,22 @@ en:
         headers:
           providing_organisation: Provider
           receiving_organisation: Receiver
-
+      upload:
+        copy_html:
+          <p class="govuk-body">Large numbers of actuals can be added to the report by uploading them here.</p>
+          <p class="govuk-body">The basic steps are:</p>
+          <ol class="govuk-list govuk-list--number">
+            <li>Prepare the acutals data</li>
+            <li>Use the <a class="govuk-button govuk-button--secondary" href="%{report_actuals_template_path}">Download actuals data template</a>} as is or as a guide if required</li>
+            <li>Ensure the file is saved as UTF-8 CSV, <a class="govuk-link" target="_blank" rel="noreferrer noopener" href="https://beisodahelp.zendesk.com/hc/en-gb/articles/1500005515621-Uploading-your-Activity-Actuals-or-Forecasts-data-via-the-Templates-to-RODA">see guidance in the help centre (opens in new tab)</a></li>
+            <li>Upload and verify the data here</li>
+          </ol>
+          <p class="govuk-body">For more detailed guidance on uploading actuals data, see the <a class="govuk-link" target="_blank" rel="noreferrer noopener" href="https://beisodahelp.zendesk.com/hc/en-gb/articles/1500005601882-Downloading-the-Actuals-Template-in-order-to-Bulk-Upload">guidance in the help centre (opens in new tab)</a></p>
   page_title:
     transaction:
       edit: Edit transaction
       new: Add a transaction
-      upload: Upload bulk transactions data
+      upload: Upload actuals data
       upload_success: Successful uploads
   activerecord:
     errors:
