--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -299,6 +299,7 @@ en:
         updated_activities: Updated activities
         new_activities_report: New activities added in this report
         updated_activities_report: Activities updated in this report
+        activities_by_delivery_partner: Activities by delivery partner
     header:
       activity:
         identifier: RODA Identifier
@@ -317,6 +318,9 @@ en:
           project: Project (level C)
           third_party_project: Third-party project (level D)
         view_activity: View
+    actions:
+      activity:
+        view_activities: View activities
   filters:
     activity:
       title: Filter activities
