--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -26,7 +26,7 @@ en:
   form:
     button:
       activity:
-        new_child: Add child activity to %{name}
+        new_child: Add new activity to %{name}
         submit: Continue
     link:
       activity:
