Add a plural version for Action columns

--- a/config/locales/default.en.yml
+++ b/config/locales/default.en.yml
@@ -29,6 +29,7 @@ en:
     header:
       default:
         action: Action
+        actions: Actions
   activerecord:
     errors:
       format: "%{attribute} %{message}"
