Allow budgets to be destroyed
We want to make sure if there is an editable report, then
budgets created erroneously can be deleted.

--- a/config/locales/models/budget.en.yml
+++ b/config/locales/models/budget.en.yml
@@ -6,6 +6,8 @@ en:
         success: Budget successfully created
       update:
         success: Budget successfully updated
+      destroy:
+        success: Budget successfully deleted
   form:
     label:
       budget:
