--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -118,6 +118,7 @@ en:
         aid_type: What is the aid type?
         actual_end_date: Actual end date (optional)
         actual_start_date: Actual start date (optional if planned start date is entered)
+        benefitting_countries: What countries will benefit from this activity?
         call_present: Is there a call for this %{level}?
         call_open_date: Call open date
         call_close_date: Call close date
@@ -165,6 +166,7 @@ en:
         actual_end_date: For example, 2 2 2020
         actual_start_date: For example, 11 1 2020
         aid_type: Where an activity is not G01 or E01 we would expect most of our activity to be classified as D02 but there will be cases where C01 is more appropriate.
+        benefitting_countries: Select all that apply
         call_open_date: (Enter as dd/mm/yyyy) - This is not the same as IATI Activity start date! Date call will be/was launched. Estimate sufficient until Activity Status is 'Decided'. Where there will be calls for outline and then full proposals, the opening date of the first call (outline) only is sufficient
         call_close_date: (Enter as dd/mm/yyyy) - This is not the same as IATI Activity End date! Date call will be/was closed. Estimate sufficient until Activity Status is 'Decided'. Where there will be calls for outline and then full proposals, the closing date of the first call (outline) only is sufficient
         country_delivery_partners: "Please provide up to ten country delivery partners. A name is required, provide a acronym where applicable, for example: 'National Council for the State Funding Agencies (CONFAP)'"
@@ -227,6 +229,7 @@ en:
         actual_end_date: Actual end date
         actual_start_date: Actual start date
         aid_type: Aid type
+        benefitting_countries: Benefitting countries
         budgets: Budgets
         button:
           create: Add activity
@@ -389,6 +392,7 @@ en:
     activity_form:
       show:
         aid_type: Aid type
+        benefitting_countries: What are the countries benefitting from this activity?
         call_dates: What are the call open and close dates for this %{level}?
         call_present: Is there a call for this %{level}?
         channel_of_delivery_code: Channel of delivery code
