--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -361,6 +361,9 @@ en:
     tab_content:
       change_history:
         guidance: Changes made to this activity
+    breadcrumbs:
+      current_index: Current activities
+      historic_index: Historic activities
   tabs:
     activity:
       title: Contents
