--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -358,6 +358,7 @@ en:
         default_selection_value: Select a recipient country
       third_party_projects: Third-party projects (level D)
       transactions: Transactions
+      refunds: Refunds
     tab_content:
       change_history:
         guidance: Changes made to this activity
