--- a/config/locales/models/refund.en.yml
+++ b/config/locales/models/refund.en.yml
@@ -3,6 +3,10 @@ en:
     refund:
       create:
         success: Refund successfully created
+  page_content:
+    refund:
+      button:
+        create: Add a refund
   page_title:
     refund:
       new: Add a new refund
@@ -15,3 +19,8 @@ en:
     hint:
       refund:
         financial_quarter_and_year: The financial quarter the refund applies to
+  table:
+    header:
+      refund:
+        financial_quarter: Financial quarter
+        value: Refund amount
