Allow refunds to be edited
This updates the activity view to show an edit link
(if the policy allows) to view and change the details
of a refund

--- a/config/locales/models/refund.en.yml
+++ b/config/locales/models/refund.en.yml
@@ -3,13 +3,17 @@ en:
     refund:
       create:
         success: Refund successfully created
+      update:
+        success: Refund successfully updated
   page_content:
     refund:
       button:
         create: Add a refund
+      edit_noun: refund
   page_title:
     refund:
       new: Add a new refund
+      edit: Edit refund
   form:
     label:
       refund:
