Allow a refund to be deleted
This adds a button to the edit view of the refund
which triggers a call to the controller's destroy action.

--- a/config/locales/models/refund.en.yml
+++ b/config/locales/models/refund.en.yml
@@ -5,6 +5,8 @@ en:
         success: Refund successfully created
       update:
         success: Refund successfully updated
+      destroy:
+        success: Refund successfully deleted
   page_content:
     refund:
       button:
