--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -365,6 +365,8 @@ en:
     breadcrumbs:
       current_index: Current activities
       historic_index: Historic activities
+      organisation_current_index: "%{org_name} current activities"
+      organisation_historic_index: "%{org_name} historic activities"
   tabs:
     activity:
       title: Contents
