Add a warning to the actual upload page
Some users have duplicated their actual spend data during reporting due
to us not being clear that the upload appends to the data already in the
application as opposed to replacing it.

As a first step towards fixing this issue, we add a strong warning to
users that the upload will append data.

The Linked guidance should be updated along with this change.

--- a/config/locales/models/actual.en.yml
+++ b/config/locales/models/actual.en.yml
@@ -92,6 +92,8 @@ en:
           <li>Upload and verify the data here</li>
           </ol>
           <p class="govuk-body">For more detailed guidance on uploading actuals data, see the <a class="govuk-link" target="_blank" rel="noreferrer noopener" href="https://beisodahelp.zendesk.com/hc/en-gb/articles/1500005601882-Downloading-the-Actuals-Template-in-order-to-Bulk-Upload">guidance in the help centre (opens in new tab)</a></p>
+        warning_html:
+          <div class="govuk-warning-text"><span class="govuk-warning-text__icon" aria-hidden="true">!</span><strong class="govuk-warning-text__text"><span class="govuk-warning-text__assistive">Warning</span>Uploading actuals data is an append operation. Uploading the same data twice will result in duplication. See the guidance for more details.</strong></div>
   page_title:
     actual:
       edit: Edit actual spend
