Implement DownloadLinkMailer#send_link
This can be previewed via the development server, e.g. at

http://localhost:3000/rails/mailers/download_link_mailer

--- a/config/locales/views/exports.en.yml
+++ b/config/locales/views/exports.en.yml
@@ -38,3 +38,7 @@ en:
       index: Exports
       organisation:
         show: Exports for %{name}
+  mailer:
+    download_link:
+      success:
+        subject: "%{application_name} - Your export '%{file_name}' is ready to download"
