Implement DownloadLinkMailer#send_failure_notification
This can be previewed in a dev server e.g.

http://localhost:3000/rails/mailers/download_link_mailer/

--- a/config/locales/views/exports.en.yml
+++ b/config/locales/views/exports.en.yml
@@ -42,3 +42,5 @@ en:
     download_link:
       success:
         subject: "%{application_name} - Your export '%{file_name}' is ready to download"
+      failure:
+        subject: '%{application_name} - Your export failed'
