--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -18,6 +18,7 @@ en:
       timeout: "Your session expired. Please sign in again to continue."
       unauthenticated: "You need to sign in or sign up before continuing."
       unconfirmed: "You have to confirm your email address before continuing."
+      invalid_two_factor: "Invalid two-factor verification code."
     mailer:
       confirmation_instructions:
         subject: "Confirmation instructions"
