--- a/config/locales/devise.security_extension.en.yml
+++ b/config/locales/devise.security_extension.en.yml
@@ -6,17 +6,17 @@ en:
       equal_to_email: 'must be different than the email.'
       password_complexity:
         digit:
-          one: must contain at least one digit
-          other: must contain at least %{count} digits
+          one: Password must contain at least one digit
+          other: Password must contain at least %{count} digits
         lower:
-          one: must contain at least one lower-case letter
-          other: must contain at least %{count} lower-case letters
+          one: Password must contain at least one lower-case letter
+          other: Password must contain at least %{count} lower-case letters
         symbol:
-          one: must contain at least one punctuation mark or symbol
-          other: must contain at least %{count} punctuation marks or symbols
+          one: Password must contain at least one punctuation mark or symbol
+          other: Password must contain at least %{count} punctuation marks or symbols
         upper:
-          one: must contain at least one upper-case letter
-          other: must contain at least %{count} upper-case letters
+          one: Password must contain at least one upper-case letter
+          other: Password must contain at least %{count} upper-case letters
   devise:
     invalid_captcha: 'The captcha input was invalid.'
     invalid_security_question: 'The security question answer was invalid.'
