--- a/config/locales/devise.security_extension.en.yml
+++ b/config/locales/devise.security_extension.en.yml
@@ -1,9 +1,9 @@
 en:
   errors:
     messages:
-      taken_in_past: 'was used previously.'
-      equal_to_current_password: 'must be different than the current password.'
-      equal_to_email: 'must be different than the email.'
+      taken_in_past: "was used previously."
+      equal_to_current_password: "must be different than the current password."
+      equal_to_email: "must be different than the email."
       password_complexity:
         digit:
           one: Password must contain at least one digit
@@ -17,11 +17,12 @@ en:
         upper:
           one: Password must contain at least one upper-case letter
           other: Password must contain at least %{count} upper-case letters
+      password_confirmation: Password confirmation doesn't match password
   devise:
-    invalid_captcha: 'The captcha input was invalid.'
-    invalid_security_question: 'The security question answer was invalid.'
+    invalid_captcha: "The captcha input was invalid."
+    invalid_security_question: "The security question answer was invalid."
     paranoid_verify:
-      code_required: 'Please enter the code our support team provided'
+      code_required: "Please enter the code our support team provided"
     paranoid_verification_code:
       updated: Verification code accepted
       show:
@@ -29,8 +30,8 @@ en:
         verification_code: Verification code
         submit: Submit
     password_expired:
-      updated: 'Your new password is saved.'
-      change_required: 'Your password is expired. Please renew your password.'
+      updated: "Your new password is saved."
+      change_required: "Your password is expired. Please renew your password."
       show:
         renew_your_password: Renew your password
         current_password: Current password
@@ -38,5 +39,5 @@ en:
         new_password_confirmation: Confirm new password
         change_my_password: Change my password
     failure:
-      session_limited: 'Your login credentials were used in another browser. Please sign in again to continue in this browser.'
-      expired: 'Your account has expired due to inactivity. Please contact the site administrator.'
+      session_limited: "Your login credentials were used in another browser. Please sign in again to continue in this browser."
+      expired: "Your account has expired due to inactivity. Please contact the site administrator."
