--- a/config/locales/default.en.yml
+++ b/config/locales/default.en.yml
@@ -45,7 +45,7 @@ en:
       messages:
         accepted: "%{attribute} must be accepted"
         blank: "%{attribute} can't be blank"
-        confirmation: doesn't match %{attribute}
+        confirmation: "%{attribute} confirmation doesn't match %{attribute}"
         empty: "%{attribute} can't be empty"
         equal_to: "%{attribute} must be equal to %{count}"
         even: "%{attribute} must be even"
