--- a/config/locales/models/user.en.yml
+++ b/config/locales/models/user.en.yml
@@ -26,6 +26,7 @@ en:
     hint:
       user:
         active: Deactivated users cannot log in
+        new_password: Minimum 15 characters; must contain at least one digit, one lowercase letter, one uppercase letter, and one punctuation mark or symbol
         reset_mfa: The user will have to provide their mobile number on their next log in attempt
     user:
       active:
