Add bulk upload of Refunds
Our chosen method is to bolt this functionality onto the existing Actuals
upload, renaming the Value column to Actual Value and adding a new Refund Value
column.

Exactly one of these values must be filled in for an upload to occur.

Create Actual now takes an optional parameter which allows it to generate a
Refund instead, but is otherwise unchanged.

Import Actual contains logic for determining whether a row is a Refund or
Actual, based on the presence of the two types of value.

--- a/config/locales/models/actual.en.yml
+++ b/config/locales/models/actual.en.yml
@@ -139,7 +139,7 @@ en:
         invalid_date: Date must be a valid date
         invalid_iati_disbursement_channel: The disbursement channel must be a valid IATI Disbursement Channel code
         invalid_iati_organisation_type: The receiving organisation type must be a valid IATI Organisation Type code
-        non_numeric_value: The value must be numeric
+        non_numeric_value: One of Actual Value and Refund Value must be numeric and the other must be blank
         unauthorised: You are not authorised to report against this activity
         unknown_identifier: Identifier is not recognised
         invalid_characters: This cell contains invalid characters
