rake users:active:send_password_resets
A one-time mass email to send password reset links to every RODA user on
migration from Auth0 to Devise.

Run this after deployment of a merged Devise authentication solution.

Co-authored-by: Russell Garner <rgarner@zephyros-systems.co.uk>

--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -24,6 +24,8 @@ en:
         subject: "Confirmation instructions"
       reset_password_instructions:
         subject: "Reset password instructions"
+      first_time_devise_reset_password_instructions:
+        subject: "Action required: RODA password reset"
       unlock_instructions:
         subject: "Unlock instructions"
       email_changed:
